@@ -2,47 +2,67 @@ package CardGames.utils;
 
 import java.util.ArrayList;
 
-public record Player(String type, ArrayList<Card> cards) {
+public class Player {
+    protected final String type;
+    protected ArrayList<Card> cards;
+    protected int total;
+
+    public Player(String type, ArrayList<Card> cards){
+        this.type = type;
+        this.cards = new ArrayList<>(cards);
+        this.total = 0;
+    }
+
+    public void addCards(Card card) {
+        this.cards.add(card);
+        checkTotal();
+    }
     public void addCards(ArrayList<Card> cards) {
         this.cards.addAll(cards);
+        checkTotal();
     }
 
-    public void addCard(Card card) {
-        this.cards.add(card);
+    public int checkTotal() {
+        this.total = 0; // reset total to recalculate
+        for(Card card : this.cards) {
+            if (card.getValue() > 11)
+                this.total += 10;
+            else
+                this.total += card.getValue();
+        }
+        return this.total;
     }
+
+    public String getType() { return this.type; }
 
     public ArrayList<Card> getCards() {
-        return this.cards;
+        if (this.type.equals("Dealer")) {
+            ArrayList<Card> dealerCards = new ArrayList<>(this.cards);
+            if (!dealerCards.isEmpty()) {
+                dealerCards.set(dealerCards.size() - 1, new Card("?"));
+            }
+            return dealerCards;
+        }
+        return new ArrayList<>(this.cards);
     }
 
-    public int getCardsValue() {
-        int total = 0;
-        for(Card card : cards) {
-            total = total + card.getValue();
+    public void checkForAces() {
+        if (this.total > 21) {
+            for (Card card : this.cards) {
+                if (card.getValue() == 11) {
+                    card = new Card(1, card.getSuit());
+                    checkTotal();
+                }
+            }
         }
-        return total;
-    }
-
-    public ArrayList<Card> getCards(boolean dealer) {
-        Card hiddenCard = new Card( "?");
-        ArrayList<Card> cards = new ArrayList<>(this.cards);
-        if (dealer) {
-            cards.removeLast();
-            cards.addLast(hiddenCard);
-        }
-        return cards;
     }
 
     public Card putCardOnTable() {
         if (this.cards.isEmpty())
             return null;
-        Card currCard = this.cards.getFirst();
-        System.out.println(this.type + " puts down: " + currCard);
-        this.cards.removeFirst();
-        return currCard;
+        System.out.println(this.type + " puts down: " + this.cards.get(0));
+        return this.cards.remove(0);
     }
 
-    public boolean hasCards() {
-        return !this.cards.isEmpty();
-    }
+    public boolean hasCards() { return !this.cards.isEmpty(); }
 }
